misc4.0/progressive-delivery/experiment-four/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cluster-gateway

spec:
  gatewayClassName: openshift-default
  listeners:
  - name: demo
    hostname: "*.gwapi.${DOMAIN}"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
